# Bachelor_project_existing_solution_model

docker/: docker-compose.yml
existing_solution_model/: Cargo.toml
existing_solution_model/src/: audit_db.rs  db.rs  main.rs
mock_api_connector/: Cargo.toml  a.rs  docker-compose.yml  generate_data.rs
mock_api_connector/src/: db.rs  main.rs
