[package]
name = "existing_solution_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-postgres = "0.7.10"
postgres-types = { version = "0.X.X", features = ["derive"] }
serde_json = "1.0.108"
serde = "1.0.193"
futures = "0.3.30"
sha2 = "0.10.8"
base16ct = {version = "0.2.0", features = ["alloc"]}
