[package]
name = "mock_api_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
rand = "0.8.5"
tokio = { version = "1.35.0", features = ["full"] }
tokio-postgres = "0.7.10"
postgres-types = { version = "0.X.X", features = ["derive"] }
serde_json = "1.0.108"
serde = "1.0.193"
